VFS-8914 PR fixes: disabled text truncate in direct-dataset-control

--- a/src/app/styles/components/file-datasets/direct-dataset-control.scss
+++ b/src/app/styles/components/file-datasets/direct-dataset-control.scss
@@ -19,6 +19,8 @@
       min-width: 0;
       margin-left: $horizontal-element-margin;
       .status-tip-container {
+        display: flex;
+        align-items: center;
         margin-left: $horizontal-element-margin;
         margin-right: $horizontal-element-margin;
       }
